<resources>
    <string name="app_name">Meetup</string>
    <string name="enter_emailid">Enter EmailID</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entername">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="find_your_account">Find your account</string>
    <string name="submit">Submit</string>
</resources>